--- a/style.css
+++ b/style.css
@@ -52,6 +52,28 @@ h4{
 	text-transform: uppercase;
 	
 }
+h3{
+	font-size:26px;
+	font-weight:300;
+}
+.sub-link{
+	display:block;
+	color:#ccc;
+	font: size 12px;
+	text-decoration: underline;
+	
+}
+.btn-outline{
+	background:none;
+	color:#fff;
+	border:2px solid #fff;
+
+}
+.btn-outline:hover{
+	color:#fff;
+	border-color:#ccc;
+}
+
 /* Header */
 .header{
 	height:530px;
@@ -62,6 +84,8 @@ h4{
 	display: flex;
 	justify-content: flex-end;
 	padding:20px 40px;
+	position:relative;
+	z-index:2;
 }
 .header nav .login-btn{
 	cursor: pointer;
@@ -83,11 +107,36 @@ h4{
 	align-items: center;
 	margin-top:30px;
 }
+.header .header-text-1 {
+  font-size: 22px;
+  font-weight: bold;
+}
 
 .header .header-text-2{
 	font-size:18px;
-	margin:25px;
+	margin:25px 0;
 }
+/* Sub Header */
+.sub-header{
+	display:grid;
+	grid-template-columns: 2fr 4fr 2fr;
+	gap:40px;
+	align-items:center;
+	padding:30px 40px;
+    background: linear-gradient(318.68deg, #0F495C 0%, #0D3640 49.72%, #08141F 100%);
+    padding: 28px 10px 28px 20px;
+    z-index: 1;
+    width: 100%;
+}
+.sub-header>div:last-of-type{
+	justify-self: end;
+	align-items: end;
+}
+.sub-header>div:last-of-type .sub-link{
+	text-align: center;
+
+}
+
 
 /* Media Queries */
 @media (max-width: 768px){
@@ -98,4 +147,25 @@ h4{
 		text-align:center;
 		padding:0 20px;
 	}
+	 .header .header-text-1 {
+    margin-bottom: 40px;
+  }
+
+  .header .header-text-2 {
+    display: none;
+  }
+
+
+	.sub-header{
+		grid-template-columns: 1fr;
+		text-align:center;
+	}
+	.sub-header img{
+		width:250px;
+		margin:auto;
+	}
+	.sub-header>div:last-of-type{
+		justify-self: center;
+		align-self: center;
+
 }
