added live section

--- a/style.css
+++ b/style.css
@@ -218,6 +218,29 @@ font-weight: bold;
 .categories .cover-4{
 	background:url(img/cover-4.jpg)
 }
+/* Live */
+.live{
+	background: #151516;
+	padding:40px;
+
+}
+.live-border{
+	border:4px solid #1ce783;
+	border-radius: 16px;
+	padding:100px;
+	display:flex;
+	flex-direction: column;
+	align-items:center;
+	justify-content:center;
+	text-align: center;
+
+}
+.live a{
+	text-transform:uppercase;
+	font-size:18px;
+	margin-top: 20px ;
+	text-decoration: underline; 
+}
 
 
 
@@ -270,6 +293,9 @@ font-weight: bold;
 }
 .categories .covers{
 	grid-template-columns: 1fr;
+}
+.live-border{
+	padding:30px 10px;
 }
 
 }
