--- a/style.css
+++ b/style.css
@@ -241,6 +241,37 @@ font-weight: bold;
 	margin-top: 20px ;
 	text-decoration: underline; 
 }
+.live-sports{
+	background:url(img/live-sports.jpg)no-repeat center center/cover;
+	height:800px;
+	position:relative;
+}
+.live-sports-content{
+	position:absolute;
+	top:160px;
+	left:100px;
+	max-width:550px;
+}
+.live-sports-logos{
+	width:300px;
+	margin-top:40px;
+	display:flex;
+	align-items:center;
+	justify-content:space-between;
+}
+.live-sports-logos > div{
+	background:url(img/network-logo-bg.png)no-repeat center center/cover;
+	height:60px;
+	width:60px;
+	display:flex;
+	justify-content:center;
+	align-items:center;
+}
+.live-sports-logos img{
+	width:40px;
+
+}
+
 
 
 
@@ -296,6 +327,14 @@ font-weight: bold;
 }
 .live-border{
 	padding:30px 10px;
+}
+.live-sports{
+	background:url(img/live-sports-small.jpg) no-repeat center center/cover;
+}
+.live-sports-content{
+	top:30px;
+	left:30px;
+	margin-top:60px;
 }
 
 }
