--- a/style.css
+++ b/style.css
@@ -271,6 +271,44 @@ font-weight: bold;
 	width:40px;
 
 }
+/* footer */
+.footer{
+	background: #ebedf2;
+	color:#333;
+}
+.footer p{
+	color: #333;
+}
+.footer a{
+	color:#333;
+}
+.footer-container{
+	max-width:1100px;
+	margin:auto;
+	padding:40px;
+
+}
+.footer-lists{
+	display:flex;
+	justify-content:space-between;
+}
+
+.footer-lists .lists-head{
+	text-transform: uppercase;
+	font-weight: bold;
+	margin-bottom: 5px;
+}
+.divider{
+	width:100%;
+	height:3px;
+	border-top:1px #ccc solid;
+	margin:30px 0;
+}
+.social-icons img{
+	width:25px;
+	height:25px;
+	margin-right: 25px;
+}
 
 
 
@@ -335,6 +373,9 @@ font-weight: bold;
 	top:30px;
 	left:30px;
 	margin-top:60px;
+}
+.footer-lists{
+	flex-direction: column;
 }
 
 }
